--- a/backend/templates/cv_template.html
+++ b/backend/templates/cv_template.html
@@ -211,6 +211,8 @@
         .language-stars {
             color: #f39c12;
             font-size: 8px;
+            white-space: nowrap;
+            display: inline-flex;
         }
 
         .language-stars .fa-star.empty {
