feat: Add new CV template `cv_leag76_template.html` with embedded styles.

--- a/backend/templates/cv_leag76_template.html
+++ b/backend/templates/cv_leag76_template.html
@@ -18,17 +18,10 @@
             --text-color: #403A3A;
             --text-color-light: #707070;
             --container-color: #FAFAFA;
-
-            --container-color-alt: {
-                    {
-                    sidebar_color | default('#F0EFEF')
-                }
-            }
-
-            ;
+            /* prettier-ignore */
+            --container-color-alt: #E0E0E0;
             --body-color: #FCFCFC;
-            --body-font: 'Poppins',
-            sans-serif;
+            --body-font: 'Poppins', sans-serif;
             --h1-font-size: 1.5rem;
             --h2-font-size: 1.25rem;
             --h3-font-size: 1rem;
